integration of utilisateur controller